add: session domain
